--- a/corona.Rmd
+++ b/corona.Rmd
@@ -4,8 +4,8 @@ author: "최의용"
 date: '2020 3 3 '
 output: 
   html_document:
+    theme: readable  
     highlight: textmate
-    theme: default
     toc: true
     toc_float: true
     code_folding: hide
@@ -62,7 +62,12 @@ ggChoropleth(data = korpop2020,      # 지도에 표현할 데이터
              interactive = T)
 
 
+
+```
+
 ## 코로나 확진자
+
+```{r}
 corona_0301 <- read_xlsx("corona19_kr_20200301.xlsx")
 
 corona_0301 <- corona_0301 %>% 
@@ -80,8 +85,6 @@ corona_0301 <- corona_0301 %>%
   left_join(tbc_unique) %>% 
   select(name, `확진환자 (명)`)
 
-
-
 kor_pop_corona <- korpop2020 %>% 
   left_join(corona_0301) %>% 
   rename(pop_corona = `확진환자 (명)`)
@@ -98,75 +101,15 @@ ggChoropleth(data = kor_pop_corona,      # 지도에 표현할 데이터
 
 
 
-kor_pop_corona_2 <- kor_pop_corona %>% 
-  gather(key = "case", value = "pops", `pop2020`,`pop_corona`)
 
+```
 
+## 코로나 버블 차트
 
-ggplot(data = kor_pop_corona_2) +
-  geom_col(aes(x = name, y = pops, fill = pops))
+[How to plot animated maps with gganimate](https://d4tagirl.com/2017/05/how-to-plot-animated-maps-with-gganimate)
 
-ggplot(data = kor_pop_corona_2) +
-  geom_col(aes(x = name, y = pops, fill = pops, 
-               group = case)) +
-  facet_wrap(~case)
-
-
-
-### 
-corona_flow <- read_xlsx("corona19-kr.xlsx")
-
-corona_flow_2 <- corona_flow %>% 
-  filter(location != "검역" & state1 == "확진") %>%
-  rename(Day = "datetime(kst)") %>% 
-  group_by(Day, location, state1) %>% 
-  summarise(count = sum(count)) 
-
-p <- corona_flow_2 %>% 
-  ggplot(aes(Day, count, group = location, color = factor(location))) +
-  geom_line() +
-  scale_color_viridis_d() +
-  labs(x = "날짜", y = "확진자 수(26일 이후)") +
-  theme(legend.position = "top")
-
-
-p + geom_point() + 
-  geom_text( aes(y = count+1,label=paste0(location, " (",count,"명)")), size=3, vjust=-1) +
-  transition_reveal(Day)
-
-
-
-####
-library(readr)
-library(dplyr)
-
-url_csv <- 'https://raw.githubusercontent.com/d4tagirl/R-Ladies-growth-maps/master/rladies.csv'
-rladies <- read_csv(url(url_csv)) %>% 
-  select(-1)
-
-library(DT)
-
-datatable(rladies, rownames = FALSE,
-          options = list(pageLength = 5))
-
-world <- ggplot() +
-  borders("world", colour = "gray85", fill = "gray80") +
-  theme_map() 
-
-map <- world +
-  geom_point(aes(x = lon, y = lat, size = followers),
-             data = rladies, 
-             colour = 'purple', alpha = .5) +
-  scale_size_continuous(range = c(1, 8), 
-                        breaks = c(250, 500, 750, 1000)) +
-  labs(size = 'Followers')
-
-
-
+```{r}
 korea <- map_data("world", region = c("South Korea"))
-
-
-data(world.cities)
 
 Lat_lon_fun <- function(addr) {
   data_list <-
@@ -184,65 +127,69 @@ Lat_lon_fun <- function(addr) {
 
 
 
-
 location_list <- corona_0301$name
 
 location_long_lat <- map_dfr(location_list, function(x) {
   Lat_lon_fun(x)
 })
 
-asdf <- cbind(corona_0301, location_long_lat[,-1]) %>% 
+corona_0301_bubble <- cbind(corona_0301, location_long_lat[,-1]) %>% 
   rename(pop = `확진환자 (명)`)
 
-asdf$pop <- as.numeric(asdf$pop)
-asdf$long <- as.numeric(asdf$long)
-asdf$lat <- as.numeric(asdf$lat)
+corona_0301_bubble$pop <- as.numeric(corona_0301_bubble$pop)
+corona_0301_bubble$long <- as.numeric(corona_0301_bubble$long)
+corona_0301_bubble$lat <- as.numeric(corona_0301_bubble$lat)
 
-# ggplot() + 
-#   geom_polygon(data=korea, aes(x=long, y=lat, group=group, fill=region)) +
-#   geom_point(data=korea.pop, aes(x=long, y=lat, size = pop), shape = 16, color = "green", alpha = 0.4) +
-#   scale_size_area(max_size=10)
 
 
 ggplot() + 
   geom_polygon(data=korea, aes(x=long, y=lat, group=group, fill=region)) +
-  geom_point(data=asdf, aes(x=long, y=lat, size = pop), shape = 16, color = "green", alpha = 0.4) +
+  geom_point(data=corona_0301_bubble, aes(x=long, y=lat, size = pop), shape = 16, color = "green", alpha = 0.4) +
   scale_size_area(max_size=30) +
-  geom_text(data=asdf, aes(x=long+0.2, y=lat+0.2, label=name))
+  geom_text(data=corona_0301_bubble, aes(x=long+0.2, y=lat+0.2, label=name))
+```
+
+
+## 플로우
+
+```{r}
+### 
+# corona_flow <- read_xlsx("corona19-kr.xlsx")
+# 
+# corona_flow_2 <- corona_flow %>% 
+#   filter(location != "검역" & state1 == "확진") %>%
+#   rename(Day = "datetime(kst)") %>% 
+#   group_by(Day, location, state1) %>% 
+#   summarise(count = sum(count)) 
+# 
+# p <- corona_flow_2 %>% 
+#   ggplot(aes(Day, count, group = location, color = factor(location))) +
+#   geom_line() +
+#   scale_color_viridis_d() +
+#   labs(x = "날짜", y = "확진자 수(26일 이후)") +
+#   theme(legend.position = "top")
+# 
+# 
+# p + geom_point() + 
+#   geom_text( aes(y = count+1,label=paste0(location, " (",count,"명)")), size=3, vjust=-1) +
+#   transition_reveal(Day)
+```
+
+
+## 비교 그래프
+
+```{r}
+kor_pop_corona_2 <- kor_pop_corona %>% 
+  gather(key = "case", value = "pops", `pop2020`,`pop_corona`)
 
 
 
+ggplot(data = kor_pop_corona_2) +
+  geom_col(aes(x = name, y = pops, fill = pops))
 
-# 
-# map_less_frames <- world +
-#   geom_point(aes(x = lon, y = lat, size = est_followers, 
-#                  frame = date),
-#              data = rladies_less_frames, colour = 'purple', alpha = .5) +
-#   geom_point(aes(x = lon, y = lat, size = est_followers, 
-#                  frame = date),
-#              data = ghost_points_ini, alpha = 0) +
-#   geom_point(aes(x = lon, y = lat, size = est_followers, 
-#                  frame = date),
-#              data = ghost_points_fin, colour = 'purple', alpha = .5) +
-#   # scale_size_continuous(range = c(1, 8), breaks = c(250, 500, 750, 1000)) +
-#   labs(size = 'Followers')
-# 
-# ani.options(interval = .15)
-# gganimate(map_less_frames)
-# 
-# 
-# # write.csv(location_long_lat,file="location_long_lat.csv")
-# world <- ggplot() +
-#   borders("world", colour = "gray85", fill = "gray80") +
-#   theme_map() 
-# 
-# map <- world +
-#   geom_point(aes(x = lon, y = lat, size = followers),
-#              data = rladies, 
-#              colour = 'purple', alpha = .5) +
-#   scale_size_continuous(range = c(1, 8), 
-#                         breaks = c(250, 500, 750, 1000)) +
-#   labs(size = 'Followers')
-
+ggplot(data = kor_pop_corona_2) +
+  geom_col(aes(x = name, y = pops, fill = pops, 
+               group = case)) +
+  facet_wrap(~case)
 ```
 
